[package]
name = "pocket3d-vita"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GPU (GXM) Pocket3D renderer for PS Vita composing inside vita2d"

[package.metadata.vita]
title_id = "PK3DV0001"
title_name = "Pocket3D Vita Smoke"
build_std = "std,panic_abort"

# This is a target-specific standalone crate, like pocket3d-gu. Consumers add
# it as a path dependency from their Vita binary rather than making it a member
# of the desktop pocket3d workspace.
[workspace]
resolver = "2"

[dependencies]
pocket3d-bsp = { path = "../pocket3d-bsp", default-features = false, features = ["libm"] }
glam = { version = "0.33", default-features = false, features = ["libm"] }
libm = "0.2"

[target.'cfg(target_os = "vita")'.dependencies]
vita2d-sys = "0.1.1"
vitasdk-sys = { version = "0.3.3", features = ["SceGxm_stub"] }

[[example]]
name = "fullscreen_sky"
path = "examples/fullscreen_sky.rs"
