[package]
name = "pocket3d"
description = "Pocket3D: a small, modern, extensible 3D runtime (wgpu-based)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["bsp"]
# First-class GoldSrc BSP world support (rendering glue + collision impl).
bsp = ["dep:pocket3d-bsp"]

[dependencies]
pocket3d-bsp = { workspace = true, optional = true }

wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true, features = ["std"] }
bytemuck = { workspace = true }
pollster = { workspace = true }
gltf = { workspace = true }
png = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
font8x8 = { workspace = true }
